; ModuleID = '/home/carl/AnghaBench/linux/drivers/memstick/core/extr_mspro_block.c_mspro_queue_rq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/memstick/core/extr_mspro_block.c_mspro_queue_rq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blk_mq_hw_ctx = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.memstick_dev* }
%struct.memstick_dev = type { i32 }
%struct.blk_mq_queue_data = type { i32* }
%struct.mspro_block_data = type { i32, i32*, i64 }

@BLK_STS_DEV_RESOURCE = common dso_local global i32 0, align 4
@BLK_STS_IOERR = common dso_local global i32 0, align 4
@BLK_STS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.blk_mq_hw_ctx*, %struct.blk_mq_queue_data*)* @mspro_queue_rq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mspro_queue_rq(%struct.blk_mq_hw_ctx* %0, %struct.blk_mq_queue_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.blk_mq_hw_ctx*, align 8
  %5 = alloca %struct.blk_mq_queue_data*, align 8
  %6 = alloca %struct.memstick_dev*, align 8
  %7 = alloca %struct.mspro_block_data*, align 8
  store %struct.blk_mq_hw_ctx* %0, %struct.blk_mq_hw_ctx** %4, align 8
  store %struct.blk_mq_queue_data* %1, %struct.blk_mq_queue_data** %5, align 8
  %8 = load %struct.blk_mq_hw_ctx*, %struct.blk_mq_hw_ctx** %4, align 8
  %9 = getelementptr inbounds %struct.blk_mq_hw_ctx, %struct.blk_mq_hw_ctx* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.memstick_dev*, %struct.memstick_dev** %11, align 8
  store %struct.memstick_dev* %12, %struct.memstick_dev** %6, align 8
  %13 = load %struct.memstick_dev*, %struct.memstick_dev** %6, align 8
  %14 = call %struct.mspro_block_data* @memstick_get_drvdata(%struct.memstick_dev* %13)
  store %struct.mspro_block_data* %14, %struct.mspro_block_data** %7, align 8
  %15 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %16 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %15, i32 0, i32 0
  %17 = call i32 @spin_lock_irq(i32* %16)
  %18 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %19 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %2
  %23 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %24 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %23, i32 0, i32 0
  %25 = call i32 @spin_unlock_irq(i32* %24)
  %26 = load i32, i32* @BLK_STS_DEV_RESOURCE, align 4
  store i32 %26, i32* %3, align 4
  br label %62

27:                                               ; preds = %2
  %28 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %29 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %41

32:                                               ; preds = %27
  %33 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %34 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %33, i32 0, i32 0
  %35 = call i32 @spin_unlock_irq(i32* %34)
  %36 = load %struct.blk_mq_queue_data*, %struct.blk_mq_queue_data** %5, align 8
  %37 = getelementptr inbounds %struct.blk_mq_queue_data, %struct.blk_mq_queue_data* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = call i32 @blk_mq_start_request(i32* %38)
  %40 = load i32, i32* @BLK_STS_IOERR, align 4
  store i32 %40, i32* %3, align 4
  br label %62

41:                                               ; preds = %27
  %42 = load %struct.blk_mq_queue_data*, %struct.blk_mq_queue_data** %5, align 8
  %43 = getelementptr inbounds %struct.blk_mq_queue_data, %struct.blk_mq_queue_data* %42, i32 0, i32 0
  %44 = load i32*, i32** %43, align 8
  %45 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %46 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %45, i32 0, i32 1
  store i32* %44, i32** %46, align 8
  %47 = load %struct.blk_mq_queue_data*, %struct.blk_mq_queue_data** %5, align 8
  %48 = getelementptr inbounds %struct.blk_mq_queue_data, %struct.blk_mq_queue_data* %47, i32 0, i32 0
  %49 = load i32*, i32** %48, align 8
  %50 = call i32 @blk_mq_start_request(i32* %49)
  %51 = load %struct.memstick_dev*, %struct.memstick_dev** %6, align 8
  %52 = call i64 @mspro_block_issue_req(%struct.memstick_dev* %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %57

54:                                               ; preds = %41
  %55 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %56 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %55, i32 0, i32 1
  store i32* null, i32** %56, align 8
  br label %57

57:                                               ; preds = %54, %41
  %58 = load %struct.mspro_block_data*, %struct.mspro_block_data** %7, align 8
  %59 = getelementptr inbounds %struct.mspro_block_data, %struct.mspro_block_data* %58, i32 0, i32 0
  %60 = call i32 @spin_unlock_irq(i32* %59)
  %61 = load i32, i32* @BLK_STS_OK, align 4
  store i32 %61, i32* %3, align 4
  br label %62

62:                                               ; preds = %57, %32, %22
  %63 = load i32, i32* %3, align 4
  ret i32 %63
}

declare dso_local %struct.mspro_block_data* @memstick_get_drvdata(%struct.memstick_dev*) #1

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1

declare dso_local i32 @blk_mq_start_request(i32*) #1

declare dso_local i64 @mspro_block_issue_req(%struct.memstick_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
